[project]
name = "chatbot_api"
version = "0.2"
dependencies = [
    "fastapi==0.110.0",
    "uvicorn[standard]==0.27.1",
    "python-dotenv==1.0.1",
    "langchainhub==0.1.15",
    "langchain==0.1.16",
    "langchain-core==0.1.52",
    "langchain-community==0.0.34",
    "langchain-openai==0.0.8",

    "neo4j==5.20.0",
    "numpy==1.26.4",
    "openai>=1.40.0",
    "pydantic==2.7.4",
    "opentelemetry-api==1.22.0"
]

[project.optional-dependencies]
dev = ["black", "flake8"]
